# Astraia

./: .env.example  .gitignore  README.md  llm駆動最適化フレームワーク_現実路線プロジェクト計画書_v_1.md  main.py  pyproject.toml  量子回路自動設計拡張_計画.md
configs/: base.yaml  branin_2d.yaml  qgan_kl.yaml  qgan_kl_multi.yaml  zdt3_multi.yaml
configs/examples/: llm_template.yaml
configs/multiobj/: qgan_kl_depth.yaml  zdt3.yaml  zdt3_llm.yaml
configs/quantum/: qaoa_llm_guided.yaml  qaoa_llm_guided_no_llm.yaml  qaoa_small.yaml  qft_fidelity_depth.yaml
docs/: _config.yaml  _config.yml  experiment_gui_todo.md  index.md  llm_evaluator_config_examples.md  manual_usage.md  qaoa_llm_runbook.md  quantum_evaluator.md
docs/decisions/: experiment_gui_plan_v2.md  llm_optimization_framework_plan_v1.md
docs/explanations/: overview.md
docs/guides/: cli_quickstart.md  cli_reference.md  gui_backend_usage.md  overview.md  run_artifacts.md  sample_configs.md
docs/howto/: cli_quickstart.md  cli_usage_cookbook.md  llm_comparison_mode.md  qaoa_llm_runbook.md  setup_install.md
docs/reference/: cli_reference.md  configuration_structure.md  quantum_evaluator.md  run_artifacts.md
frontend/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
planner_prompts/: qaoa_maxcut_success.md  qaoa_planner_directives.md  qgan_kl_minimal.txt  quantum_circuit_planner.md  zdt3_llm.txt  zdt3_success.md
src/anemoi/: cli.py  optimization.py
src/anemoi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/astraia/: __init__.py  cli.py  config.py  (+12 more)
src/astraia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_circuit_fidelity_evaluator.py  test_circuit_fidelity_property.py  test_cli_runs.py  test_cli_security.py  test_cli_visualize.py  test_config_validation.py  test_evaluator_base.py  test_gui_backend.py  test_llm_critic.py  test_llm_guidance.py  test_llm_usage.py  test_meta_search.py  test_multiobj_configs.py  test_noise_simulation_config.py  test_openai_provider.py  test_optimization_helpers.py  test_pareto_report.py  test_pareto_summary.py  test_planner.py  test_qaoa_evaluator.py  test_qgan_evaluator.py  test_run_management.py  test_run_summary.py  test_strategy_catalog.py  test_tracking.py  test_visualization.py  test_zdt3_evaluator.py
wiki/: index.md
(+26 files in other folders)
